SIMP CHINESE: Simplified Chinese fixed encoding files for RM 2.2 UI Bundle based on EN rev71684
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@74137 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿## Records Management Messages
+## Records Management Messages
 
 ## Page titles
 page.rmDocumentLibrary.title=\u5f52\u7c7b\u65b9\u6848
