--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-email-mappings.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-email-mappings.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿label.email-mappings=\u7535\u5b50\u90ae\u4ef6\u6620\u5c04
+label.email-mappings=\u7535\u5b50\u90ae\u4ef6\u6620\u5c04
 label.add=\u6dfb\u52a0
 label.delete=\u5220\u9664
 label.to=\u81f3
