--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿label.viewevents.title=\u4e8b\u4ef6
+label.viewevents.title=\u4e8b\u4ef6
 label.createevent.title=\u65b0\u5efa\u4e8b\u4ef6
 label.editevent.title=\u7f16\u8f91\u4e8b\u4ef6
 label.general=\u5e38\u89c4
