--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿dataSet.header.title=\u5bfc\u5165\u6570\u636e\u96c6
+dataSet.header.title=\u5bfc\u5165\u6570\u636e\u96c6
 dataSet.label=\u6570\u636e\u96c6
 dataSet.select.title=\u9009\u62e9\u6570\u636e\u96c6\u5e76\u5355\u51fb\u201c\u5bfc\u5165\u201d\u6765\u52a0\u8f7d\u6d4b\u8bd5\u6570\u636e\u3002
 dataSet.select.label=\u9009\u62e9\u6570\u636e\u96c6
