--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿## Buttons
+## Buttons
 button.new-category=\u65b0\u5efa\u7c7b\u522b
 button.new-folder=\u65b0\u5efa\u6587\u4ef6\u5939
 button.new-unfiledRecords-folder=\u65b0\u5efa\u6587\u4ef6\u5939
