--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿header.action=\u6b65\u9aa4
+header.action=\u6b65\u9aa4
 header.period=\u6301\u7eed\u65f6\u95f4
 header.events=\u4e8b\u4ef6
 header.event=\u4e8b\u4ef6
