--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿disposition-schedule.heading=\u5904\u7f6e\u8ba1\u5212
+disposition-schedule.heading=\u5904\u7f6e\u8ba1\u5212
 
 title.properties=\u5e38\u89c4
 title.actions=\u5904\u7f6e\u6b65\u9aa4
