--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿label.user=\u7528\u6237
+label.user=\u7528\u6237
 label.dateAndTime=\u65e5\u671f\u548c\u65f6\u95f4
 label.parentPath=\u8def\u5f84
 label.recordSeriesIdentifier=\u8bb0\u5f55\u7cfb\u5217\u6807\u8bc6\u7b26
