--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿label.title-new-reference = \u65b0\u53c2\u8003
+label.title-new-reference = \u65b0\u53c2\u8003
 label.select = \u9009\u62e9
 label.record-link = \u94fe\u63a5\u81f3\u8bb0\u5f55
 label.record-rel = \u5173\u7cfb
