--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-none.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-none.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿header=\u6ca1\u6709\u4e3a\u6b64\u6587\u4ef6\u5939\u5b9a\u4e49\u89c4\u5219
+header=\u6ca1\u6709\u4e3a\u6b64\u6587\u4ef6\u5939\u5b9a\u4e49\u89c4\u5219
 label.folderInheritsRules=\u6b64\u6587\u4ef6\u5939\u4ece\u81ea\u5df1\u7684\u7236\u6587\u4ef6\u5939\u7ee7\u627f\u89c4\u5219
 header.create-rule=\u521b\u5efa\u89c4\u5219
 text.create-rule=\u4ece\u5934\u4e3a\u6b64\u6587\u4ef6\u5939\u5b9a\u4e49\u60a8\u81ea\u5df1\u7684\u89c4\u5219
