--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿message.loading=\u6b63\u5728\u52a0\u8f7d...
+message.loading=\u6b63\u5728\u52a0\u8f7d...
 message.empty=\u672a\u627e\u5230\u7ed3\u679c
 message.error=\u641c\u7d22\u671f\u95f4\u51fa\u9519
 message.foundresults=\u627e\u5230 {0} \u4e2a\u9879\u76ee\u3002
