--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿header=\u9009\u62e9\u76ee\u6807\u8bb0\u5f55\u6587\u4ef6\u5939
+header=\u9009\u62e9\u76ee\u6807\u8bb0\u5f55\u6587\u4ef6\u5939
 node.root=\u5f52\u7c7b\u65b9\u6848
 title.single=\u5c06\u62a5\u544a\u5f52\u6863\u5230...
 button.file=\u6587\u4ef6\u62a5\u544a
