--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿label.disabled=\u6d3b\u52a8
+label.disabled=\u6d3b\u52a8
 label.executeAsynchronously=\u540e\u53f0\u8fd0\u884c
 label.applyToChildren=\u89c4\u5219\u5df2\u5e94\u7528\u4e8e\u5b50\u6587\u4ef6\u5939
 label.and=\u6ee1\u8db3\u6240\u6709\u6761\u4ef6
