--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿form.required.fields=\u5fc5\u586b\u5b57\u6bb5
+form.required.fields=\u5fc5\u586b\u5b57\u6bb5
 header.newRule=\u65b0\u5efa\u89c4\u5219
 header.editRule=\u7f16\u8f91\u89c4\u5219
 header.general=\u5e38\u89c4
