--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿header.singleUpload=\u4e0a\u4f20\u6587\u4ef6
+header.singleUpload=\u4e0a\u4f20\u6587\u4ef6
 header.multiUpload=\u4e0a\u4f20\u6587\u4ef6
 header.singleUpdate=\u66f4\u65b0\u6587\u4ef6
 header.singleImport=\u5bfc\u5165
