GERMAN: German RM 2.2 Updated UI Bundle based on EN rev74257
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@74596 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_de.properties
@@ -35,7 +35,7 @@ label.button-view-log=Vollst\u00e4ndiges Protokoll anzeigen
 label.button-specify=Festlegen
 label.button-export=Exportieren
 label.button-file-record=Als Record ablegen
-label.button-apply=Anwenden
+label.button-apply=Audit-Bericht ausf\u00fchren
 label.button-details=Details
 
 label.filed-log-message=Audit-Protokoll wurde als Record abgelegt.
@@ -63,7 +63,7 @@ label.header-entries=Anzahl Eintr\u00e4ge
 label.header-from=Von
 label.header-to=Bis
 label.header-event=Ereignis
-label.header-property=Eigenschaft
+label.header-property=Metadaten
 
 label.dialog-title=Details von Ereignis {0}
 label.property=Eigenschaft
