--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_de.properties
@@ -10,7 +10,7 @@ label.mandatory=Mandatory
 
 label.datatype.unknown=Unbekannt
 label.datatype.text=Text
-label.datatype.boolean=Boolean
+label.datatype.boolean=Kontrollk\u00e4stchen
 label.datatype.date=Datum
 
 message.getpropertiesfail=Benutzerdefinierte Eigenschaftsdefinitionen konnten nicht abgerufen werden.
