--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_de.properties
@@ -22,19 +22,12 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 Stunden)
 
 record.folder.path.title=Hier klicken, um Hilfetext f\u00fcr das Record-Ordnerpfad-Feld anzuzeigen.
-record.folder.path.help=<p>Die folgenden Ersetzungen sind zul\u00e4ssig:</p>\
-   <p></p>\
-   <p>date.day.short = So</p>\
-   <p>date.day = So</p>\
-   <p>date.day.long = Sonntag</p>\
-   <p>date.day.number = 7 (1-7)</p>\
-   <p>date.day.year = 216 (001-365)</p>\
-   <p>date.month.short = Aug</p>\
-   <p>date.month = Aug</p>\
-   <p>date.month.long = August</p>\
-   <p>date.month.number = 08 (01-12)</p>\
-   <p>date.year.short = 13</p>\
-   <p>date.year = 13</p>\
-   <p>date.year.long = 2013</p>\
-   <p>date.year.week = 31 (01-52)</p>\
-   <p>node.cm:title = <title value of the node></p>\
+record.folder.path.help=<p>Geben Sie einen Teil einer Record-Eigenschaft ein, um die Optionen zur automatischen Vervollst\u00e4ndigung anzuzeigen. Wenn Sie zum Beispiel "rm" eingeben, sind die Optionen u.\u00a0a.:</p>\
+	<ul>\<li>- Ablagedatum {node.rma:dateFiled}</li>\
+	<li>- Ort {node.rma:location}</li></ul>\
+	<p>Records werden auf Grundlage jedes einzelnen Record-Eigenschaftswerts einem Ablagewert zugeteilt.</p>\
+	<p>Es werden immer nur sechs Optionen angeboten.</p>\
+	<p>Datumsoptionen setzen diesen Teil des Pfads auf das Datum der Regelausf\u00fchrung. Wenn die Ausf\u00fchrung zum Beispiel am Montag erfolgt:</p>\
+	<ul><li>- Tag kurz {date.day.short} = Mon</li>\
+	<li>- Tag lang {date.day.long} = Montag</li></ul>\
+	<p>Weitere Informationen zu den Optionen zur automatischen Vervollst\u00e4ndigung finden Sie in der Records Management-Hilfe.</p>
