SPANISH: Spanish RM 2.2 Updated UI Bundle based on EN rev74257
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@74597 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
@@ -35,7 +35,7 @@ label.button-view-log=Ver registro completo
 label.button-specify=Especificar
 label.button-export=Exportar
 label.button-file-record=Archivar como documento de archivo
-label.button-apply=Aplicar
+label.button-apply=Ejecutar informe de auditor\u00eda
 label.button-details=Detalles
 
 label.filed-log-message=El registro de auditor\u00edas se ha archivado como documento de archivo.
@@ -63,7 +63,7 @@ label.header-entries=N\u00famero de entradas
 label.header-from=De
 label.header-to=Para
 label.header-event=Evento
-label.header-property=Propiedad
+label.header-property=Metadatos
 
 label.dialog-title=Detalles de evento ''{0}''
 label.property=Propiedad
