--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_es.properties
@@ -10,7 +10,7 @@ label.mandatory=Obligatorio
 
 label.datatype.unknown=Desconocido
 label.datatype.text=Texto
-label.datatype.boolean=Booleano
+label.datatype.boolean=Casilla de verificaci\u00f3n
 label.datatype.date=Fecha
 
 message.getpropertiesfail=No se pudieron recuperar las definiciones de la propiedad personalizada.
