--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_es.properties
@@ -22,19 +22,12 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 horas)
 
 record.folder.path.title=Haga clic para mostrar texto de ayuda para el campo de la ruta de la carpeta de documentos de archivo.
-record.folder.path.help=<p>Las siguientes substituciones est\u00e1n permitidas:</p>\
-   <p></p>\
-   <p>date.day.short = Dom</p>\
-   <p>date.day = Dom</p>\
-   <p>date.day.long = Domingo</p>\
-   <p>date.day.number = 7 (1-7)</p>\
-   <p>date.day.year = 216 (001-365)</p>\
-   <p>date.month.short = Ago</p>\
-   <p>date.month = Ago</p>\
-   <p>date.month.long = Agosto</p>\
-   <p>date.month.number = 08 (01-12)</p>\
-   <p>date.year.short = 13</p>\
-   <p>date.year = 13</p>\
-   <p>date.year.long = 2013</p>\
-   <p>date.year.week = 31 (01-52)</p>\
-   <p>node.cm:title = <title value of the node></p>\
+record.folder.path.help=<p>Escriba una parte de la propiedad de un registro para mostrar las opciones de autocompletar. Por ejemplo, si escribe rm, las opciones incluyen:</p>\
+	<ul><li>- Fecha de archivo {node.rma:dateFiled}</li>\
+	<li>\- Ubicaci\u00f3n {node.rma:location}</li>\</ul>\
+	<p>Los documentos de archivo se colocar\u00e1n en el plan de ficheros en base al valor individual de la propiedad del registro.</p>\
+	<p>Solo se ofrecen 6 opciones cada vez.</p>\
+	<p>Las opciones de fecha establecen la parte de la ruta hasta la fecha en que se ejecuta la regla. Por ejemplo, si se ejecuta el lunes, entonces:</p>\
+	<ul><li>- D\u00eda corto {date.day.short} = Lun.</li>\
+	<li>- D\u00eda largo {date.day.long} = Lunes</li></ul>
+	<p>Consulte la Ayuda de gestión de documentos de archivo para obtener información sobre las opciones de autocompletar.</p>\
