JAPANESE: Japanese RM 2.2 Updated UI Bundle based on EN rev74257
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@74598 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_ja.properties
@@ -35,7 +35,7 @@ label.button-view-log=\u30d5\u30eb\u30ed\u30b0\u306e\u8868\u793a
 label.button-specify=\u6307\u5b9a
 label.button-export=\u30a8\u30af\u30b9\u30dd\u30fc\u30c8
 label.button-file-record=\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6574\u7406\u4fdd\u7ba1
-label.button-apply=\u9069\u7528
+label.button-apply=\u76e3\u67fb\u30ec\u30dd\u30fc\u30c8\u306e\u5b9f\u884c
 label.button-details=\u8a73\u7d30
 
 label.filed-log-message=\u76e3\u67fb\u30ed\u30b0\u306f\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6574\u7406\u4fdd\u7ba1\u3055\u308c\u3066\u3044\u307e\u3059\u3002
@@ -63,7 +63,7 @@ label.header-entries=\u30a8\u30f3\u30c8\u30ea\u6570
 label.header-from=\u9001\u4fe1\u8005
 label.header-to=\u5b9b\u5148
 label.header-event=\u30a4\u30d9\u30f3\u30c8
-label.header-property=\u30d7\u30ed\u30d1\u30c6\u30a3
+label.header-property=\u30e1\u30bf\u30c7\u30fc\u30bf
 
 label.dialog-title={0}\u30a4\u30d9\u30f3\u30c8\u306e\u8a73\u7d30
 label.property=\u30d7\u30ed\u30d1\u30c6\u30a3
