--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_ja.properties
@@ -10,7 +10,7 @@ label.mandatory=\u5fc5\u9808
 
 label.datatype.unknown=\u4e0d\u660e
 label.datatype.text=\u30c6\u30ad\u30b9\u30c8
-label.datatype.boolean=\u8ad6\u7406\u578b
+label.datatype.boolean=\u30c1\u30a7\u30c3\u30af\u30dc\u30c3\u30af\u30b9
 label.datatype.date=\u65e5\u4ed8
 
 message.getpropertiesfail=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u5b9a\u7fa9\u3092\u53d6\u5f97\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
