--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_ja.properties
@@ -22,19 +22,12 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM\uff0824\u6642\u9593\uff09
 
 record.folder.path.title=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0\u306e\u30d1\u30b9\u30d5\u30a3\u30fc\u30eb\u30c9\u306b\u3064\u3044\u3066\u306f\u3001\u30af\u30ea\u30c3\u30af\u3057\u3066\u30d8\u30eb\u30d7\u30c6\u30ad\u30b9\u30c8\u3092\u8868\u793a\u3057\u307e\u3059\u3002
-record.folder.path.help=<p>\u6b21\u306e\u7f6e\u63db\u304c\u53ef\u80fd\u3067\u3059\uff1a</p>\
-   <p></p>\
-   <p>date.day.short = Sun</p>\
-   <p>date.day = Sun</p>\
-   <p>date.day.long = \u65e5\u66dc\u65e5</p>\
-   <p>date.day.number = 7 (1-7)</p>\
-   <p>date.day.year = 216 (001-365)</p>\
-   <p>date.month.short = Aug</p>\
-   <p>date.month = Aug</p>\
-   <p>date.month.long = 8\u6708</p>\
-   <p>date.month.number = 08 (01-12)</p>\
-   <p>date.year.short = 13</p>\
-   <p>date.year = 13</p>\
-   <p>date.year.long = 2013</p>\
-   <p>date.year.week = 31 (01-52)</p>\
-   <p>node.cm:title = <title value of the node></p>\
+record.folder.path.help=<p>\u30ec\u30b3\u30fc\u30c9\u30d7\u30ed\u30d1\u30c6\u30a3\u306e\u4e00\u90e8\u3092\u5165\u529b\u3059\u308b\u3068\u3001\u30aa\u30fc\u30c8\u30b3\u30f3\u30d7\u30ea\u30fc\u30c8\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u8868\u793a\u3055\u308c\u307e\u3059\u3002 \u4f8b\u3048\u3070\u3001\u300crm\u300d\u3068\u5165\u529b\u3059\u308b\u3068\u3001\u6b21\u306e\u3088\u3046\u306a\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u8868\u793a\u3055\u308c\u307e\u3059\u3002</p>\
+	<ul><li>- Date filed {node.rma:dateFiled}</li>\
+	<li>- Location {node.rma:location}</li></ul>\
+	<p>\u30ec\u30b3\u30fc\u30c9\u306f\u3001\u5404\u30ec\u30b3\u30fc\u30c9\u30d7\u30ed\u30d1\u30c6\u30a3\u306e\u5024\u306b\u57fa\u3065\u3044\u3066\u30d5\u30a1\u30a4\u30eb\u30d7\u30e9\u30f3\u306b\u5165\u308c\u3089\u308c\u307e\u3059\u3002</p>\
+	<p>\u30aa\u30d7\u30b7\u30e7\u30f3\u306f\u4e00\u5ea6\u306b6\u3064\u3060\u3051\u8868\u793a\u3055\u308c\u307e\u3059\u3002</p>\
+	<p>Date\u30aa\u30d7\u30b7\u30e7\u30f3\u306f\u3001\u30eb\u30fc\u30eb\u306e\u5b9f\u884c\u65e5\u306e\u30d1\u30b9\u306e\u4e00\u90e8\u3092\u8a2d\u5b9a\u3057\u307e\u3059\u3002 \u4f8b\u3048\u3070\u3001\u30eb\u30fc\u30eb\u304c\u6708\u66dc\u65e5\u306b\u5b9f\u884c\u3055\u308c\u308b\u5834\u5408\u306f\u3001\u6b21\u306e\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u8868\u793a\u3055\u308c\u307e\u3059\u3002</p>\
+	<ul><li>- Short Day {date.day.short} = Mon</li>\
+	<li>- Long Day {date.day.long} = Monday</li></ul>\
+	<p>\u30aa\u30fc\u30c8\u30b3\u30f3\u30d7\u30ea\u30fc\u30c8\u306e\u5168\u30aa\u30d7\u30b7\u30e7\u30f3\u306b\u3064\u3044\u3066\u306f\u3001Records Management\u306e\u30d8\u30eb\u30d7\u3092\u53c2\u7167\u3057\u3066\u304f\u3060\u3055\u3044\u3002</p>
