DUTCH: Dutch RM 2.2 Updated UI Bundle based on EN rev74257
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@74599 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_nl.properties
@@ -35,7 +35,7 @@ label.button-view-log=Volledig logboek bekijken
 label.button-specify=Specificeren
 label.button-export=Exporteren
 label.button-file-record=Archiveren als record
-label.button-apply=Toepassen
+label.button-apply=Auditrapport uitvoeren
 label.button-details=Details
 
 label.filed-log-message=Auditlog is gearchiveerd als een record.
@@ -63,7 +63,7 @@ label.header-entries=Aantal regels
 label.header-from=Van
 label.header-to=Aan
 label.header-event=Gebeurtenis
-label.header-property=Eigenschap
+label.header-property=Metagegevens
 
 label.dialog-title=Details van {0} gebeurtenis
 label.property=Eigenschap
