--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_nl.properties
@@ -10,7 +10,7 @@ label.mandatory=Verplicht
 
 label.datatype.unknown=Onbekend
 label.datatype.text=Tekst
-label.datatype.boolean=Booleaans
+label.datatype.boolean=Selectievakje
 label.datatype.date=Datum
 
 message.getpropertiesfail=Kon definities van aangepaste eigenschap niet ophalen.
