--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_nl.properties
@@ -22,19 +22,12 @@ form.control.date-picker.entry.time.format=UU:mm
 form.control.date-picker.display.time.format=UU:MM (24 uur)
 
 record.folder.path.title=Klik om de helptekst weer te geven voor het veld archiefmappad.
-record.folder.path.help=<p>De volgende substituties zijn toegestaan:</p>\
-   <p></p>\
-   <p>date.day.short = Zon</p>\
-   <p>date.day = Zon</p>\
-   <p>date.day.long = Zondag</p>\
-   <p>date.day.number = 7 (1-7)</p>\
-   <p>date.day.year = 216 (001-365)</p>\
-   <p>date.month.short = Aug</p>\
-   <p>date.month = Aug</p>\
-   <p>date.month.long = Augustus</p>\
-   <p>date.month.number = 08 (01-12)</p>\
-   <p>date.year.short = 13</p>\
-   <p>date.year = 13</p>\
-   <p>date.year.long = 2013</p>\
-   <p>date.year.week = 31 (01-52)</p>\
-   <p>node.cm:title = <title value of the node></p>\
+record.folder.path.help=<p>Typ een gedeelte van een recordeigenschap om automatisch ingevulde opties weer te geven. Als u bijvoorbeeld rm invoert, zijn de opties:</p>\
+	<ul><li>- Datum gearchiveerd {node.rma:dateFiled}</li>\
+	<li>- Locatie {node.rma:location}</li></ul>\
+	<p>Records worden in het ordeningsplan geplaatst op basis van elke afzonderlijke recordeigenschapwaarde.</p>\
+	<p>Er worden per keer slechts zes opties geboden.</p>\
+	<p>Met datumopties wordt het desbetreffende gedeelte van het pad ingesteld op de datum waarop de regel wordt uitgevoerd. Als de regel bijvoorbeeld op maandag wordt uitgevoerd, geldt het volgende:</p>\
+	<ul><li>- Dag kort {date.day.short} = Maa</li>\
+	<li>- Dag lang {date.day.long} = Maandag</li>\</ul>\
+	<p>Raadpleeg de Help bij Records Management Help voor alle automatisch ingevulde opties.</p>
