ITALIAN: Italian RM 2.2 Updated UI Bundle based on EN rev74257
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@74600 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_it.properties
@@ -10,7 +10,7 @@ label.mandatory=Obbligatorio
 
 label.datatype.unknown=Sconosciuto
 label.datatype.text=Testo
-label.datatype.boolean=Booleano
+label.datatype.boolean=Casella di controllo
 label.datatype.date=Data
 
 message.getpropertiesfail=Impossibile recuperare definizioni propriet\u00e0 personalizzata.
