--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
@@ -22,19 +22,12 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 ore)
 
 record.folder.path.title=Fare clic per visualizzare la guida per il campo del percorso della cartella di record.
-record.folder.path.help=<p>Sono permesse le seguenti sostituzioni:</p>\
-   <p></p>\
-   <p>date.day.short = Dom</p>\
-   <p>date.day = Dom</p>\
-   <p>date.day.long = Domenica</p>\
-   <p>date.day.number = 7 (1-7)</p>\
-   <p>date.day.year = 216 (001-365)</p>\
-   <p>date.month.short = Ago</p>\
-   <p>date.month = Ago</p>\
-   <p>date.month.long = Agosto</p>\
-   <p>date.month.number = 08 (01-12)</p>\
-   <p>date.year.short = 13</p>\
-   <p>date.year = 13</p>\
-   <p>date.year.long = 2013</p>\
-   <p>date.year.week = 31 (01-52)</p>\
-   <p>node.cm:title = <title value of the node></p>\
+record.folder.path.help=<p>Digitare parte della propriet\u00e0 di un record per visualizzare le opzioni di completamento automatico. Ad esempio, digitando rm le opzioni comprendono:</p>\
+	<ul><li>- Data di archiviazione {node.rma:dateFiled}</li>\
+	<li>- Posizione {node.rma:location}</li></ul>\
+	<p>I record vengono inseriti nel Piano file in base a ogni singolo valore di propriet\u00e0 del record.</p>\
+	<p>Vengono presentate solo 6 opzioni per volta.</p>\
+	<p>Le opzioni relative alla data impostano la corrispondente parte del percorso sulla data in cui la regola viene eseguita. Ad esempio, se \u00e8 eseguita di luned\u00ec:</p>\
+	<ul><li>- Abbreviazione giorno {date.day.short} = Lun</li>\
+	<li>- Giorno per esteso {date.day.long} = Luned\u00ec</li></ul>\
+	<p>Si veda la guida relativa alla gestione dei record per tutte le opzioni di completamento automatico.</p>
