SPANISH: Spanish RM 2.2 Updated UI Bundle based on EN rev74663
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@74971 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -85,6 +85,8 @@ message.pdf-record-fonts.transfer=Aseg\u00farese de que todos los documentos de 
 message.pdf-record-fonts.unknown=Si la transferencia o la adhesi\u00f3n incluyen documentos de archivo PDF deber\u00eda comprobar que todas las fuentes incrustadas aplicables se han incluido.
 message.request-info-success=Informaci\u00f3n solicitada correctamente
 message.request-info-failure=Se ha producido un error al solicitar informaci\u00f3n
+message.confirm.delete-hold.title=Eliminar bloqueo
+message.confirm.delete-hold=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
 
 ## Admin Console
 message.admin-console-access-denied=Necesita permisos adicionales para acceder a esta p\u00e1gina.
@@ -114,7 +116,6 @@ actions.file-to=Archivar en...
 actions.manage-permissions=Administrar permisos
 actions.move-to=Mover a...
 actions.open-folder=Reabrir carpeta
-actions.relinquish=Eliminar bloqueo
 actions.review-all=Revisar todo
 actions.reviewed=Revisado
 actions.add-record-metadata=A\u00f1adir metadatos de documento de archivo
@@ -168,8 +169,6 @@ message.edit-review-as-of-date.failure=No se pudo actualizar la fecha de inicio 
 message.edit-review-as-of-date.success=Fecha de inicio de revisi\u00f3n actualizada correctamente para ''{0}''
 message.open-folder.failure=No se pudo abrir la carpeta de documentos de archivo ''{0}''
 message.open-folder.success=Se ha abierto la carpeta de documentos de archivo ''{0}''
-message.relinquish.failure=No se pudo eliminar el bloqueo
-message.relinquish.success=Bloqueo eliminado
 message.review-all.failure=No se pudieron revisar los documentos de archivo de la carpeta ''{0}''
 message.review-all.success=Los documentos de archivo de la carpeta ''{0}'' se han revisado
 message.reviewed.failure=No se pudo revisar ''{0}''
@@ -202,6 +201,8 @@ message.file-success=Informe archivado correctamente como ''{0}''
 message.file-failure=No se pudo completar la operaci\u00f3n de archivado
 message.file-hold-report.failure=No se pudo generar el informe de destrucci\u00f3n
 message.file-hold-report.success=Informe de bloqueo generado
+message.delete-hold.failure=No se pudo eliminar el bloqueo
+message.delete-hold.success=Bloqueo eliminado
 
 ## File Plan Status Indicators
 status.rm-accession=Adhesi\u00f3n pendiente
@@ -444,6 +445,7 @@ file-to.substitution.date.day.label=D\u00eda (por ejemplo, lun)
 file-to.substitution.date.day.long.label=D\u00eda completo (por ejemplo, lunes)
 file-to.substitution.date.day.number.label=N\u00famero de d\u00eda (por ejemplo, 1)
 file-to.substitution.date.day.year.label=D\u00eda del a\u00f1o (por ejemplo, 216)
+file-to.substitution.date.day.month.label=D\u00eda del mes (por ejemplo, 18)
 file-to.substitution.date.month.short.label=Mes abreviado (por ejemplo, en)
 file-to.substitution.date.month.label=Mes (por ejemplo, en)
 file-to.substitution.date.month.long.label=Mes completo (por ejemplo, enero)
