GERMAN: German RM 2.2 Updated UI Bundle based on EN rev74663
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@75221 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -85,6 +85,8 @@ message.pdf-record-fonts.transfer=\u00dcberpr\u00fcfen Sie, ob alle soeben \u00f
 message.pdf-record-fonts.unknown=Wenn die \u00dcbertragung oder Aufnahme PDF-Records umfasst hat, sollten Sie \u00fcberpr\u00fcfen, ob die entsprechenden eingebetteten Schriften enthalten waren.
 message.request-info-success=Informationen erfolgreich angefordert
 message.request-info-failure=Beim Anfordern von Informationen ist ein Fehler aufgetreten.
+message.confirm.delete-hold.title=Sperrbereich l\u00f6schen
+message.confirm.delete-hold=M\u00f6chten Sie ''{0}'' wirklich l\u00f6schen?
 
 ## Admin Console
 message.admin-console-access-denied=Sie ben\u00f6tigen zus\u00e4tzliche Berechtigungen, um auf diese Seite zuzugreifen.
@@ -114,7 +116,6 @@ actions.file-to=Ablegen unter...
 actions.manage-permissions=Berechtigungen verwalten
 actions.move-to=Verschieben nach...
 actions.open-folder=Ordner erneut \u00f6ffnen
-actions.relinquish=Sperrbereich freigeben
 actions.review-all=Alle \u00fcberpr\u00fcfen
 actions.reviewed=\u00dcberpr\u00fcft
 actions.add-record-metadata=Record-Metadaten hinzuf\u00fcgen
@@ -168,8 +169,6 @@ message.edit-review-as-of-date.failure=Startdatum der \u00dcberpr\u00fcfung konn
 message.edit-review-as-of-date.success=Startdatum der \u00dcberpr\u00fcfung f\u00fcr ''{0}'' erfolgreich aktualisiert.
 message.open-folder.failure=Record-Ordner ''{0}'' konnte nicht ge\u00f6ffnet werden.
 message.open-folder.success=Record-Ordner ''{0}'' wurde ge\u00f6ffnet.
-message.relinquish.failure=Sperrbereich konnte nicht freigegeben werden.
-message.relinquish.success=Sperrbereich freigegeben
 message.review-all.failure=Records in Ordner ''{0}'' konnten nicht \u00fcberpr\u00fcft werden.
 message.review-all.success=Records in Ordner ''{0}'' wurden \u00fcberpr\u00fcft.
 message.reviewed.failure=''{0}'' konnte nicht \u00fcberpr\u00fcft werden.
@@ -202,6 +201,8 @@ message.file-success=Bericht als ''{0}''erfolgreich abgelegt
 message.file-failure=Die Ablageaktion konnte nicht abgeschlossen werden.
 message.file-hold-report.failure=Sperrbericht konnte nicht generiert werden.
 message.file-hold-report.success=Sperrbericht generiert
+message.delete-hold.failure=Sperrbereich konnte nicht gel\u00f6scht werden
+message.delete-hold.success=Sperrbereich gel\u00f6scht
 
 ## File Plan Status Indicators
 status.rm-accession=Aufnahme ausstehend
@@ -444,6 +445,7 @@ file-to.substitution.date.day.label=Tag (z. B. Mo)
 file-to.substitution.date.day.long.label=Tag lang (z. B. Montag)
 file-to.substitution.date.day.number.label=Tag Nummer (z. B. 1)
 file-to.substitution.date.day.year.label=Tag des Jahres (z. B. 216)
+file-to.substitution.date.day.month.label=Tag des Monats (z. B. 18)
 file-to.substitution.date.month.short.label=Monat kurz (z. B. Jan)
 file-to.substitution.date.month.label=Monat (z. B. Jan)
 file-to.substitution.date.month.long.label=Monat lang (z. B. Januar)
