--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_de.properties
@@ -85,7 +85,7 @@ description.transfers=\u00dcbertragungen
 description.transfers.more=(Records, die auf eine \u00dcbertragung oder Aufnahme warten)
 description.transfers.more.filterDisplay=Derzeit angezeigt: ''{0}''
 description.holds=Aktive Sperren
-description.holds.more=(Gesperrte Records und Record-Ordner)
+description.holds.more=(Gesperrte Records und Record Ordner)
 description.holds.more.filterDisplay=Derzeit angezeigt: ''{0}''
 description.unfiledRecords=Nicht abgelegte Records
 description.unfiledRecords.more=(Records, die nicht abgelegt sind)
