ITALIAN: Italian RM 2.2 Updated UI Bundle based on EN rev74663
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@75225 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_it.properties
+++ b/rm-share/config/alfresco/messages/rm_it.properties
@@ -85,6 +85,8 @@ message.pdf-record-fonts.transfer=Controllare che tutti i record PDF appena tras
 message.pdf-record-fonts.unknown=Se il trasferimento o l'inserimento ha interessato record PDF, \u00e8 necessario controllare che siano stati inclusi i caratteri incorporati applicabili.
 message.request-info-success=Richiesta di informazioni riuscita
 message.request-info-failure=Si \u00e8 verificato un errore durante la richiesta di informazioni
+message.confirm.delete-hold.title=Annulla sospensione
+message.confirm.delete-hold=Procedere con l''eliminazione di ''{0}''?
 
 ## Admin Console
 message.admin-console-access-denied=\u00c8 necessario disporre di permessi aggiuntivi per accedere a questa pagina.
@@ -114,7 +116,6 @@ actions.file-to=Archivia su...
 actions.manage-permissions=Gestisci permessi
 actions.move-to=Sposta in...
 actions.open-folder=Riapri cartella
-actions.relinquish=Rilascia sospensione
 actions.review-all=Rivedi tutto
 actions.reviewed=Rivisto
 actions.add-record-metadata=Aggiungi metadati del record
@@ -168,8 +169,6 @@ message.edit-review-as-of-date.failure=Impossibile aggiornare revisione in data
 message.edit-review-as-of-date.success=Aggiornamento della revisione in data riuscito per ''{0}''
 message.open-folder.failure=Impossibile aprire la cartella di record ''{0}''
 message.open-folder.success=La cartella di record ''{0}'' \u00e8 stata aperta
-message.relinquish.failure=Impossibile rilasciare sospensione
-message.relinquish.success=Sospensione rilasciata
 message.review-all.failure=Impossibile rivedere i record nella cartella ''{0}''
 message.review-all.success=I record nella cartella ''{0}'' sono stati rivisti
 message.reviewed.failure=Impossibile rivedere ''{0}''
@@ -202,6 +201,8 @@ message.file-success=Archiviazione di report come ''{0}'' riuscita
 message.file-failure=Impossibile completare operazione su file
 message.file-hold-report.failure=Impossibile generare report di sospensione
 message.file-hold-report.success=Report di sospensione generato
+message.delete-hold.failure=Impossibile cancellare la sospensione
+message.delete-hold.success=Sospensione cancellata
 
 ## File Plan Status Indicators
 status.rm-accession=Inserimento in sospeso
@@ -444,6 +445,7 @@ file-to.substitution.date.day.label=Giorno (ad es. lun)
 file-to.substitution.date.day.long.label=Giorno per esteso (ad es. luned\u00ec)
 file-to.substitution.date.day.number.label=Numero giorni (ad es. 1)
 file-to.substitution.date.day.year.label=Giorni dell'anno (ad es. 216)
+file-to.substitution.date.day.month.label=Giorno del mese (ad es. 18)
 file-to.substitution.date.month.short.label=Abbreviazione mese (ad es. gen)
 file-to.substitution.date.month.label=Mese (ad es. gen)
 file-to.substitution.date.month.long.label=Mese per esteso (ad es. gen)
