--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -85,6 +85,8 @@ message.pdf-record-fonts.transfer=\u8ee2\u9001\u3055\u308c\u305f\u3070\u304b\u30
 message.pdf-record-fonts.unknown=\u8ee2\u9001\u307e\u305f\u306f\u53d7\u8afe\u306bPDF\u30ec\u30b3\u30fc\u30c9\u304c\u542b\u307e\u308c\u3066\u3044\u305f\u5834\u5408\u3001\u9069\u5207\u306a\u7d44\u307f\u8fbc\u307f\u30d5\u30a9\u30f3\u30c8\u304c\u542b\u307e\u308c\u3066\u3044\u308b\u3053\u3068\u3092\u30c1\u30a7\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 message.request-info-success=\u60c5\u5831\u306f\u6b63\u5e38\u306b\u30ea\u30af\u30a8\u30b9\u30c8\u3055\u308c\u307e\u3057\u305f
 message.request-info-failure=\u60c5\u5831\u3092\u30ea\u30af\u30a8\u30b9\u30c8\u3057\u3066\u3044\u308b\u9593\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f
+message.confirm.delete-hold.title=\u30db\u30fc\u30eb\u30c9\u306e\u524a\u9664
+message.confirm.delete-hold=''{0}''\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 
 ## Admin Console
 message.admin-console-access-denied=\u3053\u306e\u30da\u30fc\u30b8\u306b\u30a2\u30af\u30bb\u30b9\u3059\u308b\u306b\u306f\u3001\u5225\u306e\u6a29\u9650\u304c\u65b0\u305f\u306b\u5fc5\u8981\u3067\u3059\u3002
@@ -114,7 +116,6 @@ actions.file-to=\u6574\u7406\u4fdd\u7ba1\u5148...
 actions.manage-permissions=\u6a29\u9650\u306e\u7ba1\u7406
 actions.move-to=\u79fb\u52d5\u5148...
 actions.open-folder=\u30d5\u30a9\u30eb\u30c0\u3092\u518d\u5ea6\u958b\u304f
-actions.relinquish=\u30db\u30fc\u30eb\u30c9\u306e\u89e3\u9664
 actions.review-all=\u3059\u3079\u3066\u30ec\u30d3\u30e5\u30fc
 actions.reviewed=\u30ec\u30d3\u30e5\u30fc\u6e08\u307f
 actions.add-record-metadata=\u30ec\u30b3\u30fc\u30c9\u30e1\u30bf\u30c7\u30fc\u30bf\u306e\u8ffd\u52a0
@@ -168,8 +169,6 @@ message.edit-review-as-of-date.failure=\u73fe\u6642\u70b9\u3067\u30ec\u30d3\u30e
 message.edit-review-as-of-date.success=\u73fe\u6642\u70b9\u3067''{0}''\u306e\u30ec\u30d3\u30e5\u30fc\u306f\u6b63\u5e38\u306b\u66f4\u65b0\u3055\u308c\u307e\u3057\u305f
 message.open-folder.failure=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0''{0}''\u3092\u958b\u304f\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.open-folder.success=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0''{0}''\u306f\u958b\u304b\u308c\u307e\u3057\u305f
-message.relinquish.failure=\u30db\u30fc\u30eb\u30c9\u3092\u89e3\u9664\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
-message.relinquish.success=\u30db\u30fc\u30eb\u30c9\u306f\u89e3\u9664\u3055\u308c\u307e\u3057\u305f
 message.review-all.failure=\u30d5\u30a9\u30eb\u30c0''{0}''\u3067\u30ec\u30b3\u30fc\u30c9\u3092\u30ec\u30d3\u30e5\u30fc\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.review-all.success=\u30d5\u30a9\u30eb\u30c0''{0}''\u3067\u30ec\u30b3\u30fc\u30c9\u306f\u30ec\u30d3\u30e5\u30fc\u3055\u308c\u3066\u3044\u307e\u3059
 message.reviewed.failure=''{0}''\u3092\u30ec\u30d3\u30e5\u30fc\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
@@ -202,6 +201,8 @@ message.file-success=\u30ec\u30dd\u30fc\u30c8\u3092''{0}''\u3068\u3057\u3066\u6b
 message.file-failure=\u30d5\u30a1\u30a4\u30eb\u64cd\u4f5c\u306f\u5b8c\u4e86\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.file-hold-report.failure=\u30db\u30fc\u30eb\u30c9\u30ec\u30dd\u30fc\u30c8\u3092\u751f\u6210\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.file-hold-report.success=\u30db\u30fc\u30eb\u30c9\u30ec\u30dd\u30fc\u30c8\u3092\u751f\u6210\u3057\u307e\u3057\u305f
+message.delete-hold.failure=\u30db\u30fc\u30eb\u30c9\u3092\u524a\u9664\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+message.delete-hold.success=\u30db\u30fc\u30eb\u30c9\u304c\u524a\u9664\u3055\u308c\u307e\u3057\u305f
 
 ## File Plan Status Indicators
 status.rm-accession=\u53d7\u8afe\u4fdd\u7559
@@ -444,6 +445,7 @@ file-to.substitution.date.day.label=\u66dc\u65e5\uff08\u4f8b\uff1aMon\uff09
 file-to.substitution.date.day.long.label=\u6b63\u5f0f\u5f62\u306e\u66dc\u65e5\uff08\u4f8b\uff1aMonday\uff09
 file-to.substitution.date.day.number.label=\u65e5\u4ed8\uff08\u4f8b\uff1a1\uff09
 file-to.substitution.date.day.year.label=\u5e74\u6708\u65e5\uff08\u4f8b\uff1a216\uff09
+file-to.substitution.date.day.month.label=\u65e5\u4ed8\uff08\u4f8b\uff1a18\uff09
 file-to.substitution.date.month.short.label=\u77ed\u7e2e\u5f62\u306e\u6708\uff08\u4f8b\uff1aJan\uff09
 file-to.substitution.date.month.label=\u6708\uff08\u4f8b\uff1aJan\uff09
 file-to.substitution.date.month.long.label=\u6b63\u5f0f\u5f62\u306e\u6708\uff08\u4f8b\uff1aJanuary\uff09
