DUTCH: Dutch RM 2.2 Updated UI Bundle based on EN rev74663
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@75227 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nl.properties
+++ b/rm-share/config/alfresco/messages/rm_nl.properties
@@ -85,6 +85,8 @@ message.pdf-record-fonts.transfer=Controleer of alle net overgezette PDF-records
 message.pdf-record-fonts.unknown=Als de overzetting of overdracht PDF-records omvat, moet u controleren of de toepasselijke ingesloten lettertypes zijn ingesloten.
 message.request-info-success=Informatie aangevraagd
 message.request-info-failure=Er is een fout opgetreden tijdens de informatie-aanvraag
+message.confirm.delete-hold.title=Wachtstand verwijderen
+message.confirm.delete-hold=Weet u zeker dat u ''{0}'' wilt verwijderen?
 
 ## Admin Console
 message.admin-console-access-denied=U moet extra rechten hebben om deze pagina te kunnen openen.
@@ -114,7 +116,6 @@ actions.file-to=Archiveren in...
 actions.manage-permissions=Rechten beheren
 actions.move-to=Verplaatsen naar...
 actions.open-folder=Map heropenen
-actions.relinquish=Wachtstand opheffen
 actions.review-all=Alles controleren
 actions.reviewed=Gereviseerd
 actions.add-record-metadata=Metagegevens van record toevoegen
@@ -168,8 +169,6 @@ message.edit-review-as-of-date.failure=Kon begindatum van revisie niet bijwerken
 message.edit-review-as-of-date.success=Begindatum van revisie voor ''{0}'' bijgewerkt
 message.open-folder.failure=Kon archiefmap ''{0}'' niet openen
 message.open-folder.success=Archiefmap ''{0}'' was geopend
-message.relinquish.failure=Kon wachtstand niet opheffen
-message.relinquish.success=Wachtstand opgeheven
 message.review-all.failure=Kon records in map ''{0}'' niet reviseren
 message.review-all.success=Records in map ''{0}'' zijn gereviseerd
 message.reviewed.failure=Kon ''{0}'' niet reviseren
@@ -202,6 +201,8 @@ message.file-success=Overdrachtsrapport gearchiveerd als ''{0}''
 message.file-failure=De archiveringshandeling kon niet worden afgerond
 message.file-hold-report.failure=Kon geen wachtstandrapport genereren
 message.file-hold-report.success=Wachtstandrapport gegenereerd
+message.delete-hold.failure=Kan wachtstand niet verwijderen
+message.delete-hold.success=Wachtstand verwijderd
 
 ## File Plan Status Indicators
 status.rm-accession=Overdracht in behandeling
@@ -444,6 +445,7 @@ file-to.substitution.date.day.label=Dag (bijv. Maa)
 file-to.substitution.date.day.long.label=Dag lang (bijv. Maandag)
 file-to.substitution.date.day.number.label=Dagnummer (bijv. 1)
 file-to.substitution.date.day.year.label=Dag van het jaar (bijv. 216)
+file-to.substitution.date.day.month.label=Dag van de maand (bijv. 18)
 file-to.substitution.date.month.short.label=Maand kort (bijv. Jan)
 file-to.substitution.date.month.label=Maand (bijv. Jan)
 file-to.substitution.date.month.long.label=Maand lang (bijv. Januari)
