GERMAN: German RM 2.2 Updated UI Bundle based on EN rev75227
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@75238 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_de.properties
@@ -31,3 +31,4 @@ record.folder.path.help=<p>Geben Sie einen Teil einer Record-Eigenschaft ein, um
 	<ul><li>- Tag kurz {date.day.short} = Mon</li>\
 	<li>- Tag lang {date.day.long} = Montag</li></ul>\
 	<p>Weitere Informationen zu den Optionen zur automatischen Vervollst\u00e4ndigung finden Sie in der Records Management-Hilfe.</p>
+	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Hier klicken, um alle Optionen zur automatischen Vervollst\u00e4ndigung anzuzeigen.</a></p>\
