SPANISH: Spanish RM 2.2 Updated UI Bundle based on EN rev75227
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@75239 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -328,9 +328,9 @@ menu.select.recordCategories=Categor\u00edas de documentos de archivo
 
 ## Metadata Fields
 # Generic
-details.created.on=Creado en
+details.created.on=Creado
 details.created.by=Creado por
-details.modified.on=Modificado el
+details.modified.on=Modificado
 details.modified.by=Modificado por
 details.by=Por
 details.size=Tama\u00f1o
