--- a/rm-share/config/alfresco/messages/rm_it.properties
+++ b/rm-share/config/alfresco/messages/rm_it.properties
@@ -328,9 +328,9 @@ menu.select.recordCategories=Categorie record
 
 ## Metadata Fields
 # Generic
-details.created.on=Creato su
+details.created.on=Creato
 details.created.by=Creato da
-details.modified.on=Modificato su
+details.modified.on=Modificato
 details.modified.by=Modificato da
 details.by=Da
 details.size=Dimensioni
