--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
@@ -31,3 +31,4 @@ record.folder.path.help=<p>Digitare parte della propriet\u00e0 di un record per 
 	<ul><li>- Abbreviazione giorno {date.day.short} = Lun</li>\
 	<li>- Giorno per esteso {date.day.long} = Luned\u00ec</li></ul>\
 	<p>Si veda la guida relativa alla gestione dei record per tutte le opzioni di completamento automatico.</p>
+	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Fare clic qui per tutte le opzioni di completamento automatico.</a></p>\
