--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_ja.properties
@@ -31,3 +31,4 @@ record.folder.path.help=<p>\u30ec\u30b3\u30fc\u30c9\u30d7\u30ed\u30d1\u30c6\u30a
 	<ul><li>- Short Day {date.day.short} = Mon</li>\
 	<li>- Long Day {date.day.long} = Monday</li></ul>\
 	<p>\u30aa\u30fc\u30c8\u30b3\u30f3\u30d7\u30ea\u30fc\u30c8\u306e\u5168\u30aa\u30d7\u30b7\u30e7\u30f3\u306b\u3064\u3044\u3066\u306f\u3001Records Management\u306e\u30d8\u30eb\u30d7\u3092\u53c2\u7167\u3057\u3066\u304f\u3060\u3055\u3044\u3002</p>
+	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">\u3053\u3053\u3092\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068\u3001\u3059\u3079\u3066\u306e\u30aa\u30fc\u30c8\u30b3\u30f3\u30d7\u30ea\u30fc\u30c8\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u8868\u793a\u3055\u308c\u307e\u3059\u3002</a></p>\
