DUTCH: Dutch RM 2.2 Updated UI Bundle based on EN rev75227
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@75242 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_nl.properties
@@ -31,3 +31,4 @@ record.folder.path.help=<p>Typ een gedeelte van een recordeigenschap om automati
 	<ul><li>- Dag kort {date.day.short} = Maa</li>\
 	<li>- Dag lang {date.day.long} = Maandag</li>\</ul>\
 	<p>Raadpleeg de Help bij Records Management Help voor alle automatisch ingevulde opties.</p>
+	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Klik hier voor alle automatisch ingevulde opties.</a></p>\
